--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@safematrix/ord-utils",
-  "version": "0.2.62",
+  "version": "0.2.63",
   "description": "Ordinals Utils",
   "keywords": [
     "bitcoin",
@@ -35,7 +35,7 @@
   "dependencies": {
     "bignumber.js": "^9.1.1",
     "bip32": "^4.0.0",
-    "bitcoinjs-lib-mpc": "^6.1.14",
+    "bitcoinjs-lib-mpc": "file:../Plugins/bitcoinjs-lib",
     "bs58check": "^2.1.2",
     "randombytes": "^2.1.0",
     "uint8array-tools": "^0.0.7",
