--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@safematrix/ord-utils",
-  "version": "0.5.0-beta.5",
+  "version": "0.5.0-beta.7",
   "description": "Ordinals Utils",
   "keywords": [
     "bitcoin",
@@ -37,6 +37,7 @@
     "bip32": "^4.0.0",
     "bitcoinjs-lib": "^6.1.6",
     "bs58check": "^2.1.2",
+    "ord-utils-tiny-secp256k1": "^1.0.1",
     "randombytes": "^2.1.0",
     "uint8array-tools": "^0.0.7",
     "varuint-bitcoin": "^1.1.2"
