--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@safematrix/ord-utils",
-  "version": "0.5.0-beta.7",
+  "version": "0.5.1",
   "description": "Ordinals Utils",
   "keywords": [
     "bitcoin",
