feat: Remove initBitcoin function
The initBitcoin function is no longer needed, as wasm init is handled outside the transaction class.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@safematrix/ord-utils",
+  "name": "@safematrix/dogecoin-utils",
   "version": "0.5.3",
   "description": "Ordinals Utils",
   "keywords": [
